--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,12 @@ jobs:
     - name: Install uv
       run: pip install uv
 
-    - name: Install dependencies
-      run: uv pip install -e . && uv pip install -r requirements.txt
+    - name: Set up project environment
+      run: |
+        uv venv
+        source .venv/bin/activate
+        uv pip install -e .
+        uv pip install pytest pytest-cov ruff
 
     - name: Run linters
       run: make lint
