--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,10 @@ jobs:
     - name: Install uv
       run: pip install uv
 
-    - name: Set up project environment
+    - name: Install dependencies
       run: |
-        uv venv
-        source .venv/bin/activate
-        uv pip install -e .
-        uv pip install pytest pytest-cov ruff
+        uv pip install -e . --system
+        uv pip install pytest pytest-cov ruff --system
 
     - name: Run linters
       run: make lint
