--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -14,12 +14,10 @@ jobs:
         with:
           python-version: '3.12'
         # make depends on uv
-      - name: Set up project environment
-	run: |
-          uv venv
-          source .venv/bin/activate
-          uv pip install -e .
-          uv pip install pytest pytest-cov ruff
+      - name: Install dependencies
+        run: |
+          uv pip install -e . --system
+          uv pip install pytest pytest-cov ruff --system
       - name: Run linter and pytest
         run: |
           make check
