--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -13,7 +13,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-        # make depends on uv
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: |
           uv pip install -e . --system
