--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -28,11 +28,11 @@ jobs:
         run: |
           make test-coverage
       - name: SonarQubeScan
+    runs-on: macos-latest
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=python-project-50
-            -Dsonar.organization=hellman1721
-            -Dsonar.python.coverage.reportPaths=coverage.xml
