added yaml capabilities

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         uv pip install -e . --system
-        uv pip install pytest pytest-cov ruff --system
+        uv pip install pytest pytest-cov ruff pyyaml --system
 
     - name: Run linters
       run: make lint
