--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,22 @@ authors = [
     {name = "Matvei Ivtushok", email = "highwayhellman@gmail.com"},
 ]
 requires-python = "<4.0,>=3.12"
-name = "hexlet-code"
+name = "gendiff"
 version = "0.1.0"
 description = "Example application"
 readme = "README.md"
+dependencies = [
+    "pyyaml>=6.0"
+]
 
 [project.scripts]
-gendiff = "hexlet_code.gendiff:main"
+gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.uv]
 dev-dependencies = [
     "ruff>=0.7.1",
     "pytest>=8.3.3",
     "pytest-cov>=5.0.0",
-    "pyyaml>=6.0"
 ]
 package = true
 
