--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ authors = [
     {name = "Matvei Ivtushok", email = "highwayhellman@gmail.com"},
 ]
 requires-python = "<4.0,>=3.12"
-name = "gendiff"
+name = "hexlet-code"
 version = "0.1.0"
 description = "Example application"
 readme = "README.md"
