--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,27 @@
 [project]
-
-authors = [
-    {name = "Matvei Ivtushok", email = "highwayhellman@gmail.com"},
-]
-requires-python = "<4.0,>=3.12"
 name = "hexlet-code"
 version = "0.1.0"
 description = "Example application"
 readme = "README.md"
+requires-python = "<4.0,>=3.12"
 dependencies = [
-    "pyyaml>=6.0"
+    "pyyaml>=6.0",
+    "pytest-cov>=5.0.0"
 ]
-
-[project.scripts]
-gendiff = "gendiff.scripts.gendiff:main"
-
-[tool.uv]
-dev-dependencies = [
-    "ruff>=0.7.1",
-    "pytest>=8.3.3",
-    "pytest-cov>=5.0.0",
-]
-package = true
-
-[tool.setuptools.packages.find]
-where = ["gendiff"]
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["gendiff"]
+
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.7.1",
+    "pytest>=8.3.3"
+]
+package = true
+
+[project.scripts]
+gendiff = "gendiff.scripts.gendiff:main"
