--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,25 +3,24 @@ name = "hexlet-code"
 version = "0.1.0"
 description = "Example application"
 readme = "README.md"
-requires-python = "<4.0,>=3.12"
+requires-python = ">=3.12"
 dependencies = [
     "pyyaml>=6.0",
     "pytest-cov>=5.0.0"
 ]
 
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools]
+[tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
 
-[tool.uv]
-dev-dependencies = [
-    "ruff>=0.7.1",
-    "pytest>=8.3.3"
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "ruff>=0.11.8",
 ]
-package = true
 
 [project.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
