--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hexlet-code"
 version = "0.1.0"
 description = "Example application"
-readme = "README.md"
+readme = ".github/workflows/README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pyyaml>=6.0",
