--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pyyaml>=6.0",
-    "pytest-cov>=5.0.0"
+    "pytest-cov>=5.0.0",
+    "ruff>=0.11.8"
 ]
 
 [build-system]
