--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,9 @@ jobs:
           python-version: '3.12'
       - name: Install dependencies
         run: |
-          pip install uv
-          uv pip install -e .[dev]
+          python -m venv venv
+          source venv/bin/activate
+          pip install -e .[dev]
       - name: Run linter and pytest
         run: |
           make check
