--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+
+      - name: Install uv
+        run: |
+          pip install uv
+
       - name: Install dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -e .[dev]
-      - name: Run linter and pytest
+          uv pip install -e .[dev]
+
+      - name: Run linter
         run: |
-          make check
+          make lint
+
+      - name: Run tests
+        run: |
+          make test
+
       - name: Run test coverage
         run: |
           make test-coverage
