--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install -e .[dev]
+          pip install uv
+          make install
 
       - name: Run linter
         run: |
